feat: criação de alertas no grafana

--- a/python-app/template.yaml
+++ b/python-app/template.yaml
@@ -1,9 +1,24 @@
+# ------------------------------------------------------------------------------
+# Template Backstage para scaffold de aplicação Flask com dashboard no Grafana.
+# 
+# Este template realiza as seguintes etapas automatizadas:
+# - Solicita nome do componente e ambiente (dev ou prod)
+# - Busca um template base de aplicação Python/Flask
+# - Publica o repositório no GitHub
+# - Registra o projeto no catálogo do Backstage
+# - Cria automaticamente um dashboard no Grafana usando uma action customizada
+#
+# Owner: Clecio Antao
+# Data: Junho/2025
+# ------------------------------------------------------------------------------
+
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: python-template-dashboard-grafana
   title: Python flask template - Grafana
   description: Flask com dashboard automatizado no Grafana
+
 spec:
   owner: development
   type: service
