--- a/python-app/template.yaml
+++ b/python-app/template.yaml
@@ -7,6 +7,7 @@
 # - Publica o repositório no GitHub
 # - Registra o projeto no catálogo do Backstage
 # - Cria automaticamente um dashboard no Grafana usando uma action customizada
+# - Cria regras de alertas automáticas no Grafana a partir de YAML externo
 #
 # Owner: Clecio Antao
 # Data: Junho/2025
