--- a/python-app/template/alert-rules.yaml
+++ b/python-app/template/alert-rules.yaml
@@ -1,79 +1,75 @@
 groups:
-  - name: flask-app-alerts
-    interval: 1m
+  - name: flask-alert-group
+    interval: 30s
     rules:
-      - uid: alert-traffic-high
+      - uid: alerta-trafego-alto
         title: Alerta de Tráfego Alto
-        condition: C
-        data:
-          - refId: A
-            relativeTimeRange:
-              from: 60
-              to: 0
-            datasourceUid: ${DATASOURCE_NAME}
-            model:
-              expr: rate(flask_http_request_total[1m])
-              format: time_series
-              interval: ""
-              intervalFactor: 2
-              legendFormat: "Tráfego"
-              refId: A
-              datasource:
-                type: prometheus
-                uid: ${DATASOURCE_NAME}
-          - refId: C
-            type: "reduce"
-            datasourceUid: "-- Mixed --"
-            model:
-              refId: C
-              type: avg
-              params: []
-              reducer: avg
-              input: A
-        thresholds:
-          - level: 1
-            operator: "gt"
-            value: 10
+        condition: B
+        noDataState: NoData
+        execErrState: Error
+        for: 1m
         annotations:
-          summary: "⚠️ Tráfego alto detectado"
-          description: "A média de requisições por segundo excedeu 10 req/s"
+          summary: "Tráfego HTTP acima de 10 req/s"
         labels:
           severity: warning
-
-      - uid: alert-errors-5xx
-        title: Alerta de Erros 5xx
-        condition: C
         data:
           - refId: A
             relativeTimeRange:
-              from: 60
+              from: 600
               to: 0
-            datasourceUid: ${DATASOURCE_NAME}
+            datasourceUid: ${DATASOURCE_UID}
             model:
-              expr: rate(flask_http_request_total{status=~"5.."}[1m])
-              format: time_series
+              expr: rate(flask_http_request_total[1m])
               interval: ""
-              intervalFactor: 2
-              legendFormat: "Erros 5xx"
+              intervalMs: 1000
+              maxDataPoints: 43200
               refId: A
-              datasource:
-                type: prometheus
-                uid: ${DATASOURCE_NAME}
-          - refId: C
-            type: "reduce"
-            datasourceUid: "-- Mixed --"
+              format: time_series
+          - refId: B
+            relativeTimeRange:
+              from: 600
+              to: 0
+            datasourceUid: ${DATASOURCE_UID}
             model:
-              refId: C
-              type: sum
-              params: []
-              reducer: sum
-              input: A
-        thresholds:
-          - level: 1
-            operator: "gt"
-            value: 0
+              expr: rate(flask_http_request_total[1m]) > 10
+              interval: ""
+              intervalMs: 1000
+              maxDataPoints: 43200
+              refId: B
+              format: time_series
+
+      - uid: alerta-erros-5xx
+        title: Alerta de Erros 5xx
+        condition: B
+        noDataState: NoData
+        execErrState: Error
+        for: 1m
         annotations:
-          summary: "🔥 Erros 5xx detectados"
-          description: "Foram detectadas respostas HTTP com status 5xx na aplicação."
+          summary: "Taxa de erros 5xx detectada"
         labels:
           severity: critical
+        data:
+          - refId: A
+            relativeTimeRange:
+              from: 600
+              to: 0
+            datasourceUid: ${DATASOURCE_UID}
+            model:
+              expr: rate(flask_http_request_total{status=~"5.."}[1m])
+              interval: ""
+              intervalMs: 1000
+              maxDataPoints: 43200
+              refId: A
+              format: time_series
+          - refId: B
+            relativeTimeRange:
+              from: 600
+              to: 0
+            datasourceUid: ${DATASOURCE_UID}
+            model:
+              expr: rate(flask_http_request_total{status=~"5.."}[1m]) > 0
+              interval: ""
+              intervalMs: 1000
+              maxDataPoints: 43200
+              refId: B
+              format: time_series
