--- a/python-app/template/docker-compose.yml
+++ b/python-app/template/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - "5000:5000"
     networks:
       - monitoring
+    volumes:
+      - ./logs:/var/log/flask  # logs acessíveis ao Promtail
+    environment:
+      - LOG_PATH=/var/log/flask/app.log
 
   prometheus:
     image: prom/prometheus:latest
@@ -30,6 +34,25 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
       - grafana-storage:/var/lib/grafana
+
+  loki:
+    image: grafana/loki:2.9.2
+    container_name: loki
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - monitoring
+
+  promtail:
+    image: grafana/promtail:2.9.2
+    container_name: promtail
+    volumes:
+      - ./logs:/var/log/flask
+      - ./promtail-config.yaml:/etc/promtail/promtail.yaml
+    command: -config.file=/etc/promtail/promtail.yaml
+    networks:
+      - monitoring
 
 volumes:
   grafana-storage:
