--- a/python-app/template/prometheus.yml
+++ b/python-app/template/prometheus.yml
@@ -2,6 +2,6 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'flask-app'
+  - job_name: ${{values.app_name}}
     static_configs:
       - targets: ['flask-app:5000']
