--- a/python-app/template/promtail-config.yaml
+++ b/python-app/template/promtail-config.yaml
@@ -6,13 +6,13 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://loki:3100/loki/api/v1/push
+  - url: http://lab-lgtm-loki-gateway:80/loki/api/v1/push
 
 scrape_configs:
-  - job_name: flask-app-logs
+  - job_name: flask-app
     static_configs:
       - targets:
           - localhost
         labels:
-          job: flask-app
+          job: flask
           __path__: /var/log/flask/*.log
